# ChatServer

./: CMakeLists.txt  README.md  autobuild.sh
bench/: bench.py
include/: common.hpp
include/client/: chatclient.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: mysql.hpp  redis.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  chatclient.cpp  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: mysql.cpp  redis.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
test/: chat.sql
